<resources>
    <string name="app_name">ColorPreview</string>
    <string name="bookmark">bookmark</string>
    <string name="create">create</string>
    <string name="account">account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">name</string>
    <string name="share">share</string>
    <string name="preview">preview</string>
    <string name="home">home</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signIn">signIn</string>
    <string name="signUp">signUp</string>
    <string name="delete">delete</string>
    <string name="title_activity_designer">DesignerActivity</string>
    <string name="upload">upload</string>
    <string name="primary">primary</string>
    <string name="secondary">secondary</string>
    <string name="text_on_primary">text On P</string>
    <string name="text_on_secondary">text On S</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="title">Title</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="getPrimaryColor">get primary color</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="getSecondaryColor">get secondary color</string>
    <string name="getTextOnPrimary">get text color on primary</string>
    <string name="getTextOnSecondary">get text color on secondary</string>
    <string name="color">color</string>
    <string name="copied">copied</string>
    <string name="create_design">create  design</string>
    <string name="success">success</string>
    <string name="failed">failed</string>
    <string name="success_delete">success delete</string>
    <string name="NULL">null</string>
    <string name="author">author</string>
    <string name="profile">profile</string>
    <string-array name="pager">
        <item>@string/first</item>
        <item>@string/second</item>
        <item>@string/third</item>
    </string-array>
</resources>
