<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="login"
            type="edu.colorpreview.view.user.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:text="@={login.username}"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={login.password}"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            android:onClick="@{() -> login.login()}"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signUp"
            app:layout_constraintEnd_toEndOf="@+id/signIn"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toBottomOf="@+id/signIn"
            android:onClick="@{view -> login.navToSignUp(view)}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
