<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="design"
            type="edu.colorpreview.model.Design" />
        <variable
            name="handler"
            type="edu.colorpreview.view.MyHandler" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:onClick="@{view -> handler.navToDesignActivity(view, design)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{design.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name" />

            <ImageView
                android:id="@+id/p"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                android:background="@{design.p}"
                tools:background="@color/primaryColor"
                android:contentDescription="@{design.p}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="60dp" />

            <ImageView
                android:id="@+id/pd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/p"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                android:background="@{design.pd}"
                tools:src="@color/primaryDarkColor"
                android:contentDescription="@{design.pd}" />

            <ImageView
                android:id="@+id/pl"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/pd"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                android:background="@{design.pl}"
                tools:src="@color/primaryLightColor"
                android:contentDescription="@{design.pl}" />

            <ImageView
                android:id="@+id/s"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/pl"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                android:background="@{design.s}"
                tools:src="@color/secondaryColor"
                android:contentDescription="@{design.s}" />

            <ImageView
                android:id="@+id/sd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/s"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                android:background="@{design.sd}"
                tools:src="@color/secondaryDarkColor"
                android:contentDescription="@{design.sd}" />

            <ImageView
                android:id="@+id/sl"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/sd"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                android:background="@{design.pl}"
                tools:src="@color/secondaryLightColor"
                android:contentDescription="@{design.pl}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="140dp" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_share_pink_600_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                android:onClick="@{view -> handler.shareClicked(view, design)}"
                android:contentDescription="@string/share" />

            <ImageButton
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_bookmark_grey_600_24dp"
                app:layout_constraintEnd_toStartOf="@+id/share"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                android:onClick="@{view -> handler.bookmarkClicked(view, design)}"
                android:contentDescription="@string/bookmark" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
